// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseNavIcon > 閉じる時(開くアイコン表示) 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_baseNavIcon_328a0d"
      >
        <button
          class="_buttonReset_328a0d"
          data-testid="targetNavButton"
          type="button"
        >
          <span
            class="_baseNavIconBorder_328a0d _baseNavIconTopClose_328a0d"
            data-testid="targetNavTop"
          />
          <span
            class="_baseNavIconBorder_328a0d"
            data-testid="targetNavMiddle"
          />
          <span
            class="_baseNavIconBorder_328a0d _baseNavIconBottomClose_328a0d"
            data-testid="targetNavBottom"
          />
          <span
            class="_baseNavIconText_328a0d"
            data-testid="targetNavText"
          >
            ダミーのナビテキスト(Close)
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_baseNavIcon_328a0d"
    >
      <button
        class="_buttonReset_328a0d"
        data-testid="targetNavButton"
        type="button"
      >
        <span
          class="_baseNavIconBorder_328a0d _baseNavIconTopClose_328a0d"
          data-testid="targetNavTop"
        />
        <span
          class="_baseNavIconBorder_328a0d"
          data-testid="targetNavMiddle"
        />
        <span
          class="_baseNavIconBorder_328a0d _baseNavIconBottomClose_328a0d"
          data-testid="targetNavBottom"
        />
        <span
          class="_baseNavIconText_328a0d"
          data-testid="targetNavText"
        >
          ダミーのナビテキスト(Close)
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`BaseNavIcon > 開いた時(閉じるアイコン表示) 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_baseNavIcon_328a0d"
      >
        <button
          class="_buttonReset_328a0d"
          data-testid="targetNavButton"
          type="button"
        >
          <span
            class="_baseNavIconBorder_328a0d _baseNavIconTopOpen_328a0d"
            data-testid="targetNavTop"
          />
          <span
            class="_baseNavIconBorder_328a0d _baseNavIconMiddleFade_328a0d"
            data-testid="targetNavMiddle"
          />
          <span
            class="_baseNavIconBorder_328a0d _baseNavIconBottomOpen_328a0d"
            data-testid="targetNavBottom"
          />
          <span
            class="_baseNavIconText_328a0d"
            data-testid="targetNavText"
          >
            ダミーのナビテキスト(Open)
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_baseNavIcon_328a0d"
    >
      <button
        class="_buttonReset_328a0d"
        data-testid="targetNavButton"
        type="button"
      >
        <span
          class="_baseNavIconBorder_328a0d _baseNavIconTopOpen_328a0d"
          data-testid="targetNavTop"
        />
        <span
          class="_baseNavIconBorder_328a0d _baseNavIconMiddleFade_328a0d"
          data-testid="targetNavMiddle"
        />
        <span
          class="_baseNavIconBorder_328a0d _baseNavIconBottomOpen_328a0d"
          data-testid="targetNavBottom"
        />
        <span
          class="_baseNavIconText_328a0d"
          data-testid="targetNavText"
        >
          ダミーのナビテキスト(Open)
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
